fix: margin and gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -116,8 +116,8 @@ input[type="radio"]:checked + label > div {
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
-  gap: 80px 50px;
-  margin: 95px 40px;
+  gap: 80px 65px;
+  margin: 95px 80px;
 }
 
 .tank-information__tanks__tank {
